--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master_memo_debtrelief.jrxml
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/aq/aq_master_memo_debtrelief.jrxml
@@ -6,6 +6,7 @@
 	<property name="ireport.y" value="0"/>
 	<parameter name="FIRST_YEAR" class="java.lang.Number"/>
 	<parameter name="SECOND_YEAR" class="java.lang.Number"/>
+    <parameter name="FORM_DATASOURCE" class="java.lang.String"/>
 	<queryString language="mdx">
 		<![CDATA[WITH
     MEMBER [Type of Finance].[Grants] as SUM({[Type of Finance].[TYPE_OF_FINANCE##100],[Type of Finance].[TYPE_OF_FINANCE##110],[Type of Finance].[TYPE_OF_FINANCE##111]})
@@ -18,7 +19,7 @@ SELECT
 } ON ROWS,
 {[Measures].[First Year], [Measures].[Second Year]} ON COLUMNS
 FROM [Financial]
-WHERE {[Type of Aid].[Debt Relief]}*{[Form Type].[bilateralOda.advanceQuestionnaire], [Form Type].[multilateralOda.advanceQuestionnaire] }
+WHERE {[Type of Aid].[Debt Relief]}*$P{FORM_DATASOURCE}
 ]]>
 	</queryString>
 	<field name="Debt Relief Grants Y1" class="java.lang.Number">
